GH-2562 - Restructure documentation.
Especially pull up the parts explaining the differences between SDN6 and SDN+OGM, make the FAQ more visible and have only one appendix in one place.

Closes #2562.

--- a/src/main/asciidoc/appendix/conversions.adoc
+++ b/src/main/asciidoc/appendix/conversions.adoc
@@ -1,6 +1,9 @@
 [[conversions]]
 = Conversions
 
+[[build-in.conversions]]
+== Built-in conversions
+
 We support a broad range of conversions out of the box.
 Find the list of supported cypher types in the official drivers manual: https://neo4j.com/docs/driver-manual/current/cypher-values/[Working with Cypher values].
 
